--- a/.github/workflows/container_build.yml
+++ b/.github/workflows/container_build.yml
@@ -66,7 +66,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup NodeJS
-        uses: actions/setup-nodejs@v4
+        uses: actions/setup-node@v4
         with:
           node-version: 22
 
