--- a/.github/workflows/container_build.yml
+++ b/.github/workflows/container_build.yml
@@ -56,7 +56,7 @@ jobs:
             core.setOutput('container_full_name', containerFullName);
             core.setOutput('container_version', version);
 
-            core.setOutput('container_registry_tag', `${registry}/${containerFullName}@${version}`);
+            core.setOutput('container_registry_tag', `${registry}/${containerFullName}:${version}`);
 
       - name: Login to GHCR
         uses: docker/login-action@v3
