--- a/.github/workflows/container_build.yml
+++ b/.github/workflows/container_build.yml
@@ -28,6 +28,12 @@ jobs:
 
     runs-on: ubuntu-24.04
 
+    permissions:
+      contents: read
+      statuses: write
+      checks: write
+      packages: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
